Fix issue with mobile mennu text overlapping icons

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -280,7 +280,7 @@ header .nav-bottom ul {
 
 header .nav-bottom li::after {
   content: "";
-  width: 19px;
+  width: 26px;
   height: 16px;
   background-image: url('/icons/icon_pink-arrow-right-md.png');
   background-size: 16px 16px;
@@ -447,6 +447,10 @@ header .nav-middle > div > div > div div:nth-of-type(3) span.close {
 }
 
 @media (max-width: 899px) {
+  header .expanded .nav-button > div > div:nth-of-type(2) {
+    border: none;
+  }
+
   header .expanded .nav-bottom > div > div:nth-of-type(2),
   header .expanded .nav-middle > div > div > div div:nth-of-type(3) {
     padding-right: 0;
@@ -465,6 +469,7 @@ header .expanded .nav-bottom > div > div:nth-of-type(2) {
   background-image: url('/icons/icon_close-x.png');
   background-size: 15px 15px;
   background-position: 34px 5px;
+  border: none;
 }
 
 header .expanded .nav-middle > div > div > div div:nth-of-type(3) {
@@ -478,6 +483,10 @@ header .expanded .nav-middle > div > div > div div:nth-of-type(3) {
 header .expanded .nav-middle > div > div > div div:nth-of-type(3) .explore,
 header .expanded .nav-bottom > div > div:nth-of-type(2) span.explore {
   display: none;
+}
+
+header .nav-bottom ul li a {
+  padding-right: 20px;
 }
 
 @media (min-width: 900px) {
@@ -549,13 +558,17 @@ header .expanded .nav-bottom > div > div:nth-of-type(2) span.explore {
   }
 
   header .nav-bottom ul li a {
-    padding-right: 20px;
-    width: 70%;
     transform: translateX(-10px);
   }
 
   header .nav-bottom a:any-link {
     font-size: var(--body-font-size-l);
+  }
+
+  header .expanded .nav-bottom > div > div:nth-of-type(2) {
+    border-left: 2px solid var(--color-blue-2);
+    border-bottom: 2px solid var(--color-blue-2);
+    border-right: 2px solid var(--color-blue-2);
   }
 
   header .nav-middle > div > div > div div:nth-of-type(2) p:nth-of-type(-n+2) {
